@@ -72,12 +72,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>3.0.0-M3</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
                     <failIfNoTests>false</failIfNoTests>
                     <argLine>
-                        -Xmx1024m -XX:MaxPermSize=256m
+                        -Xmx1024m
                     </argLine>
                     <systemProperties>
                         <property>
